Replaced usages of Arrays.asList with List.of